fixed signup terms checkbox overlays password field on small devices

--- a/css/index.styl
+++ b/css/index.styl
@@ -9,6 +9,7 @@
 headerHeight = 118px
 submitHeight = 70px
 iphoneBar = 68px
+tabsHeight = 40px
 
 @media screen and (max-width: 480px)
   html.auth0-lock-html body
@@ -477,7 +478,7 @@ iphoneBar = 68px
     font-size 12px
     color rgba(black,.54)
     line-height 22px
-    padding 10px 20px
+    padding 10px
     position relative
     a
       color rgba(black,.87)
@@ -897,12 +898,6 @@ iphoneBar = 68px
         display table
         width 100%
 
-    &.auth0-lock-iphone
-      .auth0-lock-body-content
-        //mobile view
-        @media screen and (max-width: 480px)
-          min-height "calc(100vh - %s)" % (headerHeight + submitHeight + iphoneBar)
-
     .auth0-lock-content
       //mobile view
       @media screen and (max-width: 480px)
@@ -918,12 +913,16 @@ iphoneBar = 68px
     .auth0-lock-terms
       @media screen and (max-width: 480px)
         position absolute
-        bottom 0
+        bottom -42px
         width 100%
         left 0
         -webkit-box-sizing border-box
         -moz-box-sizing border-box
         box-sizing border-box
+    
+    .auth0-lock-sign-up-terms-agreement label input
+      @media screen and (max-width: 480px)
+        top 2px
 
     .auth0-lock-submit
       //mobile view
@@ -939,6 +938,12 @@ iphoneBar = 68px
       //mobile view
       @media screen and (max-width: 480px)
         border-radius 0
+    
+    &.auth0-lock-iphone
+      .auth0-lock-body-content
+        //mobile view
+        @media screen and (max-width: 480px)
+          min-height "calc(100vh - %s)" % (headerHeight + submitHeight + iphoneBar)
 
     &.auth0-lock-no-submit
       .auth0-lock-body-content
@@ -946,33 +951,34 @@ iphoneBar = 68px
         @media screen and (max-width: 480px)
           min-height "calc(100vh - %s)" % headerHeight
 
-    &.auth0-lock-iphone
-      &.auth0-lock-no-submit
+      &.auth0-lock-iphone
         .auth0-lock-body-content
           //mobile view
           @media screen and (max-width: 480px)
             min-height "calc(100vh - %s)" % (headerHeight + iphoneBar)
 
     &.auth0-lock-with-terms
-      .auth0-lock-content
-        //mobile view
-        @media screen and (max-width: 480px)
-          top calc(50% - 32px) // - terms
+      .auth0-lock-body-content
+        margin-bottom 42px
 
     &.auth0-lock-with-tabs
       .auth0-lock-body-content
         //mobile view
         @media screen and (max-width: 480px)
-          min-height "calc(100vh - %s - 40px)" % (headerHeight + submitHeight) // - header - submit - tabs
+          min-height "calc(100vh - %s)" % (headerHeight + submitHeight + tabsHeight)
           padding-top 40px
-
-      // .auth0-lock-content
-      //   //mobile view
-      //   @media screen and (max-width: 480px)
-      //     position relative
-      //     top auto
-      //     -webkit-transform none
-      //     transform none
+          
+      &.auth0-lock-with-terms
+        .auth0-lock-body-content
+          //mobile view
+          @media screen and (max-width: 480px)
+            min-height "calc(100vh - %s - 42px)" % (headerHeight + submitHeight + tabsHeight) // - header - submit - tabs - terms
+      
+      &.auth0-lock-iphone
+        .auth0-lock-body-content
+          //mobile view
+          @media screen and (max-width: 480px)
+            min-height "calc(100vh - %s)" % (headerHeight + submitHeight + tabsHeight + iphoneBar)
 
   // Opened in frame
 
@@ -1028,6 +1034,7 @@ iphoneBar = 68px
 .auth0-lock.auth0-lock
   .auth0-lock-tabs-container
     margin -20px -20px 20px
+    height tabsHeight
 
     //mobile view
     @media screen and (max-width: 480px)
@@ -1257,6 +1264,7 @@ iphoneBar = 68px
 .auth0-lock .auth0-lock-sign-up-terms-agreement
   label input
     margin-right 5px
+    position relative
 
 input[type="button"]
    cursor pointer
